Complete hotel booking system with payment, email, and UI improvements

--- a/public/html/details.html
+++ b/public/html/details.html
@@ -12,8 +12,8 @@
   <header class="top-bar">
     <span class="brand">AFRICA HOTEL<sup>®</sup></span>
     <div class="top-bar-right">
-      <a href="login.html"><i class="fas fa-globe"></i>
-      <span class="user-menu"><i class="fas fa-user"></i> Login</span></a>
+      <a href="login.html">
+      <span class="user-menu"><i class="fas fa-sign-in-alt"></i> Login</span></a>
     </div>
   </header>
 
@@ -34,12 +34,12 @@
       <img src="../src/image/africa_hotel_logo.png" alt="Hyatt Regency Logo" class="side-menu-logo">
     </div>
     <nav class="side-menu-nav">
+      <a href="#"><i class="fas fa-user-circle"></i> <span class="link-text">Profile</span></a>
       <a href="index.html"><i class="fas fa-home"></i> <span class="link-text">Home</span></a>
       <a href="details.html"><i class="fas fa-bed"></i> <span class="link-text">Room</span></a>
       <a href="https://www.google.com/maps?q=9.805929860039297, 38.419994250887584"  target="_blank" rel="noopener"><i class="fas fa-map-marker-alt"></i> <span class="link-text">Location</span></a>
       <a href="#"><i class="fas fa-utensils"></i> <span class="link-text">Dining</span></a>
       <a href="gallery.html"><i class="fas fa-images"></i> <span class="link-text">Gallery</span></a>
-      <a href="#"><i class="fas fa-briefcase"></i> <span class="link-text">Meeting</span></a>
       <a href="#"><i class="fas fa-heart"></i> <span class="link-text">Wedding</span></a>
     </nav>
   </aside>
@@ -87,6 +87,7 @@
         <div class="room-meta">
           <span><i class="fa-solid fa-ruler-combined"></i> 258 sq ft</span>
           <span><i class="fa-solid fa-eye"></i> View Varies</span>
+          <span class="price"><i class="fa-solid fa-dollar-sign"></i> 120</span>
         </div>
         <p>
           Relax in our 24-square-meter rooms where we welcome guests with the most comfortable beds and large work areas with ergonomic chairs and charging stations. Bathrooms feature a soothing walk-in rain shower and a fine selection of bathroom amenities.
@@ -114,6 +115,7 @@
         <div class="room-meta">
           <span><i class="fa-solid fa-ruler-combined"></i> 258 sq ft</span>
           <span><i class="fa-solid fa-eye"></i> View Varies</span>
+          <span class="price"><i class="fa-solid fa-dollar-sign"></i> 120</span>
         </div>
         <p>
           Ensuring the ultimate comfort for our guests, our twin rooms are 24 square meters and can accommodate up to two people in adjacent twin beds. We offer one accessible room.
@@ -141,6 +143,7 @@
         <div class="room-meta">
           <span><i class="fa-solid fa-ruler-combined"></i> 258 sq ft</span>
           <span><i class="fa-solid fa-eye"></i> View Varies</span>
+          <span class="price"><i class="fa-solid fa-dollar-sign"></i> 120</span>
         </div>
         <p>
           Relax in our 24-square-meter rooms where we welcome guests with the most comfortable beds and large work areas with ergonomic chairs and charging stations. Bathrooms feature a soothing walk-in rain shower and a fine selection of bathroom amenities.
@@ -169,6 +172,7 @@
         <div class="room-meta">
           <span><i class="fa-solid fa-ruler-combined"></i> 258 sq ft</span>
           <span><i class="fa-solid fa-eye"></i> View Varies</span>
+          <span class="price"><i class="fa-solid fa-dollar-sign"></i> 120</span>
         </div>
         <p>
           Relax in our 24-square-meter rooms where we welcome guests with the most comfortable beds and large work areas with ergonomic chairs and charging stations. Bathrooms feature a soothing walk-in rain shower and a fine selection of bathroom amenities.
@@ -196,6 +200,7 @@
         <div class="room-meta">
           <span><i class="fa-solid fa-ruler-combined"></i> 258 sq ft</span>
           <span><i class="fa-solid fa-eye"></i> View Varies</span>
+          <span class="price"><i class="fa-solid fa-dollar-sign"></i> 120</span>
         </div>
         <p>
           Relax in our 24-square-meter rooms where we welcome guests with the most comfortable beds and large work areas with ergonomic chairs and charging stations. Bathrooms feature a soothing walk-in rain shower and a fine selection of bathroom amenities.
@@ -223,6 +228,7 @@
         <div class="room-meta">
           <span><i class="fa-solid fa-ruler-combined"></i> 258 sq ft</span>
           <span><i class="fa-solid fa-eye"></i> View Varies</span>
+          <span class="price"><i class="fa-solid fa-dollar-sign"></i> 120</span>
         </div>
         <p>
           Ensuring the ultimate comfort for our guests, our twin rooms are 24 square meters and can accommodate up to two people in adjacent twin beds. We offer one accessible room.
@@ -250,6 +256,7 @@
         <div class="room-meta">
           <span><i class="fa-solid fa-ruler-combined"></i> 258 sq ft</span>
           <span><i class="fa-solid fa-eye"></i> View Varies</span>
+          <span class="price"><i class="fa-solid fa-dollar-sign"></i> 120</span>
         </div>
         <p>
           Relax in our 24-square-meter rooms where we welcome guests with the most comfortable beds and large work areas with ergonomic chairs and charging stations. Bathrooms feature a soothing walk-in rain shower and a fine selection of bathroom amenities.
@@ -278,6 +285,7 @@
         <div class="room-meta">
           <span><i class="fa-solid fa-ruler-combined"></i> 258 sq ft</span>
           <span><i class="fa-solid fa-eye"></i> View Varies</span>
+          <span class="price"><i class="fa-solid fa-dollar-sign"></i> 120</span>
         </div>
         <p>
           Relax in our 24-square-meter rooms where we welcome guests with the most comfortable beds and large work areas with ergonomic chairs and charging stations. Bathrooms feature a soothing walk-in rain shower and a fine selection of bathroom amenities.
@@ -299,8 +307,41 @@
 <div class="center-divider">
   <span class="divider-star">&#10026;</span>
 </div>
-
+ <!-- Custom Footer -->
+  <footer class="custom-footer" id="footer-contact">
+    <div class="footer-main">
+      <div class="footer-logo">
+        <img src="../src/image/Add-a-heading-460x575.jpg" alt="Hyatt Regency Logo">
+        <div class="footer-brand">
+          <span class="brand-main">AFRICA</span>
+          <span class="brand-sub">HOTEL<sup>™</sup></span>
+        </div>
+      </div>
+      <div class="footer-info">
+        <h2>Africa Hotel Gebre Guracha</h2>
+        <div class="footer-details">
+          <div>
+            <span>On The Main Road, Gebre Guracha, Ethiopia</span>
+          </div>
+          <div>
+            <span>Tel: +251 11 517 1234</span>
+          </div>
+          <div>
+            <a href="#">Hotel Policies</a><br>
+            <a href="#">Careers</a>
+          </div>
+          <div>
+            <span class="footer-social-title">SOCIAL</span><br>
+            <a href="#" class="footer-social-link"><i class="fab fa-facebook-f"></i> Facebook</a><br>
+            <a href="#" class="footer-social-link"><i class="fab fa-twitter"></i> Twitter</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="../js/authGuard.js"></script>
   <script src="../js/details.js"></script>
+ 
   <script src="../js/javaScript.js"></script>
 </body>
 </html>
