--- a/public/html/gallery.html
+++ b/public/html/gallery.html
@@ -13,10 +13,6 @@
     <!-- Top Bar -->
   <header class="top-bar">
     <span class="brand">AFRICA HOTEL<sup>®</sup></span>
-    <div class="top-bar-right">
-      <i class="fas fa-globe"></i>
-      <span class="user-menu"><i class="fas fa-user"></i> Login</span>
-    </div>
   </header>
 
   <!-- Main Navigation -->
@@ -36,12 +32,12 @@
       <img src="../src/image/africa_hotel_logo.png" alt="Hyatt Regency Logo" class="side-menu-logo">
     </div>
     <nav class="side-menu-nav">
+      <a href="profile.html"><i class="fas fa-user-circle"></i> <span class="link-text">Profile</span></a>
       <a href="index.html"><i class="fas fa-home"></i> <span class="link-text">Home</span></a>
       <a href="details.html"><i class="fas fa-bed"></i> <span class="link-text">Room</span></a>
       <a href="https://www.google.com/maps?q=9.805929860039297, 38.419994250887584"  target="_blank" rel="noopener"><i class="fas fa-map-marker-alt"></i> <span class="link-text">Location</span></a>
       <a href="#"><i class="fas fa-utensils"></i> <span class="link-text">Dining</span></a>
       <a href="gallery.html"><i class="fas fa-images"></i> <span class="link-text">Gallery</span></a>
-      <a href="#"><i class="fas fa-briefcase"></i> <span class="link-text">Meeting</span></a>
       <a href="#"><i class="fas fa-heart"></i> <span class="link-text">Wedding</span></a>
     </nav>
   </aside>
@@ -175,6 +171,8 @@
         </div>
       </div>
     </div>
+  </footer>
+  <script src="../js/authGuard.js"></script>
 <script src="../js/javaScript.js"></script>
 </body>
 </html>
