--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hyatt Regency Addis Ababa</title>
+  <title>Africa Gebre Guracha</title>
   <link rel="stylesheet" href="../styles/home-styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -57,12 +57,12 @@
       <img src="../src/image/africa_hotel_logo.png" alt="Africa hotel Logo" class="side-menu-logo">
     </div>
     <nav class="side-menu-nav">
+      <a href="profile.html"><i class="fas fa-user-circle"></i> <span class="link-text">Profile</span></a>
       <a href="#"><i class="fas fa-home"></i> <span class="link-text">Home</span></a>
       <a href="details.html"><i class="fas fa-bed"></i> <span class="link-text">Room</span></a>
       <a href="https://www.google.com/maps?q=9.805929860039297, 38.419994250887584"  target="_blank" rel="noopener"><i class="fas fa-map-marker-alt"></i> <span class="link-text">Location</span></a>
       <a href="gallery.html"><i class="fas fa-utensils"></i> <span class="link-text">Dining</span></a>
       <a href="gallery.html"><i class="fas fa-images"></i> <span class="link-text">Gallery</span></a>
-      <a href="gallery.html"><i class="fas fa-briefcase"></i> <span class="link-text">Meeting</span></a>
       <a href="gallery.html"><i class="fas fa-heart"></i> <span class="link-text">Wedding</span></a>
     </nav>
   </aside>
@@ -108,7 +108,7 @@
             <span>On The Main Road, Gebre Guracha, Ethiopia</span>
           </div>
           <div>
-            <span>Tel: +251 11 517 1234</span>
+            <span>Tel: +251 963367651</span>
           </div>
           <div>
             <a href="#">Hotel Policies</a><br>
@@ -140,6 +140,7 @@
       © 2025 Africa Hotel. All rights reserved.
     </div>
   </footer>
+  <script src="../js/authGuard.js"></script>
   <script src="../js/javaScript.js"></script>
 </body>
 </html>
