--- a/public/html/reset-password.html
+++ b/public/html/reset-password.html
@@ -11,6 +11,7 @@
     <h2>Reset Password</h2>
     <form id="resetForm">
       <input type="password" id="newPassword" placeholder="Enter new password" required>
+      <input type="password" id="confirmPassword" placeholder="Confirm new password" required>
       <button type="submit" class="login-btn">Reset Password</button>
       <div id="resetMsg" class="error-message"></div>
     </form>
@@ -50,5 +51,6 @@
       }
     });
   </script>
+   <script src="../js/authGuard.js"></script>
 </body>
 </html>
