--- a/public/html/booking.html
+++ b/public/html/booking.html
@@ -7,60 +7,54 @@
   <link rel="stylesheet" href="../styles/booking.css">
 </head>
 <body>
-  
   <div class="modal-bg">
     <div class="modal">
       <button class="close-btn" id="closeModal">&times;</button>
       <h2>Select Dates and Guests</h2>
+      <div id="bookingError" class="error-message" style="display:none;"></div>
       <form id="bookingForm">
         <div class="form-row">
           <div class="form-group">
             <label for="checkin">Check-In date</label>
             <div class="input-icon">
-  <span class="icon" id="checkinIcon">&#128197;</span>
-  <input type="date" id="checkin" required>
-</div>
+              <span class="icon" id="checkinIcon">&#128197;</span>
+              <input type="date" id="checkin" required>
+            </div>
           </div>
           <div class="form-group">
             <label for="checkout">Checkout date</label>
             <div class="input-icon">
-  <span class="icon" id="checkoutIcon">&#128197;</span>
-  <input type="date" id="checkout" required>
-</div>
+              <span class="icon" id="checkoutIcon">&#128197;</span>
+              <input type="date" id="checkout" required>
+            </div>
           </div>
         </div>
         <div class="form-row">
           <div class="form-group">
             <label for="rooms">Rooms & Guests</label>
             <select id="rooms">
-              <option>1 Room, 1 Guest</option>
-              <option>1 Room, 2 Guests</option>
-              <option>2 Rooms, 2 Guests</option>
-              <option>2 Rooms, 4 Guests</option>
+              <option value="1-1">1 Room, 1 Guest</option>
+              <option value="1-2">1 Room, 2 Guests</option>
+              <option value="2-2">2 Rooms, 2 Guests</option>
+              <option value="2-4">2 Rooms, 4 Guests</option>
             </select>
-            <div class="checkbox-row">
-              <input type="checkbox" id="accessible">
-              <label for="accessible">Accessible Room</label>
-            </div>
           </div>
           <div class="form-group">
             <label for="rate">Special Rates</label>
             <select id="rate">
-              <option>Select Rate</option>
-              <option>Member Rate</option>
-              <option>Corporate Rate</option>
-              <option>Government Rate</option>
+              <option value="">Select Rate</option>
+              <option value="member">Member Rate</option>
+              <option value="corporate">Corporate Rate</option>
+              <option value="government">Government Rate</option>
             </select>
-            <div class="checkbox-row">
-              <input type="checkbox" id="points">
-              <label for="points">Use Points</label>
-            </div>
           </div>
         </div>
-        <button type="submit" onclick="window.location.href= 'payment.html'" class="book-btn">BOOK NOW</button>
+        <button type="submit" class="book-btn">BOOK NOW</button>
       </form>
     </div>
   </div>
+  <div id="bookingSuccess" class="success-message" style="display:none;"></div>
+  <script src="../js/authGuard.js"></script>
   <script src="../js/booking.js"></script>
 </body>
 </html>
