--- a/public/html/payment.html
+++ b/public/html/payment.html
@@ -1,47 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-      <link rel="stylesheet" href="../styles/payment.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <meta charset="UTF-8">
+  <title>Payment | Africa Hotel</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../styles/payment.css">
 </head>
 <body>
-    <div class="payment-section">
-  <h3>Select Payment Method</h3>
-  <form id="paymentForm">
-    <label class="payment-option">
-      <input type="radio" name="payment" value="mobile_banking" required>
-      <span class="icon">&#128241;</span> <!-- Mobile phone icon -->
-      Mobile Banking
-    </label>
-    <label class="payment-option">
-      <input type="radio" name="payment" value="telebirr">
-      <span class="icon">&#128222;</span> <!-- Telephone icon for Telebirr -->
-      Telebirr
-    </label>
-    <label class="payment-option">
-      <input type="radio" name="payment" value="bank_transfer">
-      <span class="icon">&#128179;</span> <!-- Bank icon -->
-      Bank Transfer
-    </label>
-    <label class="payment-option">
-      <input type="radio" name="payment" value="paypal">
-      <span class="icon">
-        <!-- PayPal SVG icon -->
-        <svg width="20" height="20" viewBox="0 0 32 32" style="vertical-align:middle">
-          <path fill="#003087" d="M29.5 8.5c-1.1-1.2-2.7-1.8-4.8-1.8H10.2c-0.6 0-1.1 0.4-1.2 1l-4.2 21.1c-0.1 0.5 0.3 1 0.8 1h5.2l1.1-5.6h3.2c4.2 0 7.5-1.7 8.5-6.6 0.4-2.1 0.2-3.7-0.7-4.8z"/>
-          <path fill="#009cde" d="M25.7 10.2c-0.8-0.9-2-1.3-3.7-1.3H12.1c-0.5 0-0.9 0.3-1 0.8l-3.5 17.5c-0.1 0.4 0.2 0.8 0.6 0.8h4.3l0.9-4.7h2.7c3.5 0 6.2-1.4 7-5.4 0.3-1.7 0.2-3-0.6-3.9z"/>
-        </svg>
-      </span>
-      PayPal
-    </label>
-    <button type="submit" class="pay-btn">Pay Now</button>
-  </form>
-</div>
-<script src="../js/payment.js"></script>
-<!-- Replace 'sb' with your real PayPal client-id for production -->
-<script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD"></script>
+  <div class="payment-container">
+    <h2>Payment Details</h2>
+    <!--< div id="bookingSummary"> </div>-->
+    <form id="paymentForm">
+      <div class="form-group">
+        <label for="cardName">Cardholder Name</label>
+        <input type="text" id="cardName" required>
+      </div>
+      <div class="form-group">
+        <label for="cardNumber">Card Number</label>
+        <input type="text" id="cardNumber" maxlength="19" required pattern="\\d{16,19}">
+      </div>
+      <div class="form-row">
+        <div class="form-group">
+          <label for="expiry">Expiry Date</label>
+          <input type="text" id="expiry" placeholder="MM/YY" required pattern="\\d{2}/\\d{2}">
+        </div>
+        <div class="form-group">
+          <label for="cvv">CVV</label>
+          <input type="password" id="cvv" maxlength="4" required pattern="\\d{3,4}">
+        </div>
+      </div>
+      <button type="submit" class="pay-btn">Pay Now</button>
+      <div id="paymentError" class="error-message" style="display:none;"></div>
+      <div id="paymentSuccess" class="success-message" style="display:none;"></div>
+    </form>
+  </div>
+  <script src="../js/authGuard.js"></script>
+  <script src="../js/payment.js"></script>
 </body>
 </html>
