--- a/public/html/register.html
+++ b/public/html/register.html
@@ -29,7 +29,7 @@
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Enter your password" required>
+        <input type="password" id="password" name="password" placeholder="Enter password" required>
       </div>
       
       <button type="submit" class="login-btn">Register</button>
@@ -38,6 +38,8 @@
       Already have an account? <a href="login.html">Sign in</a>
     </div>
   </div>
+  
   <script src="../js/register.js"></script>
+  
 </body>
 </html>
