--- a/public/html/booking.html
+++ b/public/html/booking.html
@@ -3,57 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Select Dates and Guests</title>
+  <title>Booking | Africa hotel</title>
+  <link rel="icon" type="image/png" href="../src/image/favivon-logo.png">
+  <link rel="shortcut icon" type="image/png" href="../src/image/favivon-logo.jpg">
   <link rel="stylesheet" href="../styles/booking.css">
 </head>
 <body>
-  <div class="modal-bg">
-    <div class="modal">
-      <button class="close-btn" id="closeModal">&times;</button>
-      <h2>Select Dates and Guests</h2>
-      <div id="bookingError" class="error-message" style="display:none;"></div>
-      <form id="bookingForm">
-        <div class="form-row">
-          <div class="form-group">
-            <label for="checkin">Check-In date</label>
-            <div class="input-icon">
-              <span class="icon" id="checkinIcon">&#128197;</span>
-              <input type="date" id="checkin" required>
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="checkout">Checkout date</label>
-            <div class="input-icon">
-              <span class="icon" id="checkoutIcon">&#128197;</span>
-              <input type="date" id="checkout" required>
-            </div>
-          </div>
-        </div>
-        <div class="form-row">
-          <div class="form-group">
-            <label for="rooms">Rooms & Guests</label>
-            <select id="rooms">
-              <option value="1-1">1 Room, 1 Guest</option>
-              <option value="1-2">1 Room, 2 Guests</option>
-              <option value="2-2">2 Rooms, 2 Guests</option>
-              <option value="2-4">2 Rooms, 4 Guests</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="rate">Special Rates</label>
-            <select id="rate">
-              <option value="">Select Rate</option>
-              <option value="member">Member Rate</option>
-              <option value="corporate">Corporate Rate</option>
-              <option value="government">Government Rate</option>
-            </select>
-          </div>
-        </div>
-        <button type="submit" class="book-btn">BOOK NOW</button>
-      </form>
+  <div class="auth-page-wrapper">
+    <div class="logo-container">
+      <img src="../src/image/favivon-logo.png" alt="Africa Hotel Logo" class="page-logo">
     </div>
+    <div class="modal-bg">
+      <div class="modal">
+        <button class="close-btn" id="closeModal">&times;</button>
+        <h2>Select Dates and Guests</h2>
+        <div id="bookingError" class="error-message" style="display:none;"></div>
+        <form id="bookingForm">
+          <div class="form-row">
+            <div class="form-group">
+              <label for="checkin">Check-In date</label>
+              <div class="input-icon">
+                <span class="icon" id="checkinIcon">&#128197;</span>
+                <input type="date" id="checkin" required>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="checkout">Checkout date</label>
+              <div class="input-icon">
+                <span class="icon" id="checkoutIcon">&#128197;</span>
+                <input type="date" id="checkout" required>
+              </div>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group">
+              <label for="rooms">Rooms & Guests</label>
+              <select id="rooms">
+                <option value="1-1">1 Room, 1 Guest</option>
+                <option value="1-2">1 Room, 2 Guests</option>
+                <option value="2-2">2 Rooms, 2 Guests</option>
+                <option value="2-4">2 Rooms, 4 Guests</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="rate">Special Rates</label>
+              <select id="rate">
+                <option value="">Select Rate</option>
+                <option value="member">Member Rate</option>
+                <option value="corporate">Corporate Rate</option>
+                <option value="government">Government Rate</option>
+              </select>
+            </div>
+          </div>
+          <button type="submit" class="book-btn">BOOK NOW</button>
+        </form>
+      </div>
+    </div>
+    <div id="bookingSuccess" class="success-message" style="display:none;"></div>
   </div>
-  <div id="bookingSuccess" class="success-message" style="display:none;"></div>
   <script src="../js/authGuard.js"></script>
   <script src="../js/booking.js"></script>
 </body>
