--- a/public/html/gallery.html
+++ b/public/html/gallery.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gallery | Africa Hotel</title>
+    <link rel="icon" type="image/png" href="../src/image/favivon-logo.png">
+    <link rel="shortcut icon" type="image/png" href="../src/image/favivon-logo.jpg">
     <link rel="stylesheet" href="../styles/gallery.css">
     <link rel="stylesheet" href="../styles/home-styles.css">
     <link rel="stylesheet" href="../styles/details.css">
@@ -157,7 +159,7 @@
             <span>On The Main Road, Gebre Guracha, Ethiopia</span>
           </div>
           <div>
-            <span>Tel: +251 11 517 1234</span>
+            <span>Tel: +251 96 336 7651</span>
           </div>
           <div>
             <a href="#">Hotel Policies</a><br>
