--- a/public/html/payment.html
+++ b/public/html/payment.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <title>Payment | Africa Hotel</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="../src/image/favivon-logo.png">
+  <link rel="shortcut icon" type="image/png" href="../src/image/favivon-logo.jpg">
   <link rel="stylesheet" href="../styles/payment.css">
 </head>
 <body>
+  <div class="auth-page-wrapper">
+    <div class="logo-container">
+      <img src="../src/image/favivon-logo.png" alt="Africa Hotel Logo" class="page-logo">
+    </div>
   <div class="payment-container">
     <h2>Payment Details</h2>
     <!--< div id="bookingSummary"> </div>-->
@@ -33,6 +39,7 @@
       <div id="paymentError" class="error-message" style="display:none;"></div>
       <div id="paymentSuccess" class="success-message" style="display:none;"></div>
     </form>
+    </div>
   </div>
   <script src="../js/authGuard.js"></script>
   <script src="../js/payment.js"></script>
