--- a/public/html/details.html
+++ b/public/html/details.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rooms & Suites | Africa Hotel</title>
+  <link rel="icon" type="image/png" href="../src/image/favivon-logo.png">
+  <link rel="shortcut icon" type="image/png" href="../src/image/favivon-logo.jpg">
   <link rel="stylesheet" href="../styles/details.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
@@ -322,9 +324,6 @@
         <div class="footer-details">
           <div>
             <span>On The Main Road, Gebre Guracha, Ethiopia</span>
-          </div>
-          <div>
-            <span>Tel: +251 11 517 1234</span>
           </div>
           <div>
             <a href="#">Hotel Policies</a><br>
