--- a/public/html/login.html
+++ b/public/html/login.html
@@ -3,27 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Login | Africa hotel</title>
+  <link rel="icon" type="image/png" href="../src/image/favivon-logo.png">
+  <link rel="shortcut icon" type="image/png" href="../src/image/favivon-logo.jpg">
   <link rel="stylesheet" href="../styles/login.css">
 </head>
 <body>
-  <div class="login-container">
-    <h2>Sign In</h2>
-    <div class="error-message" id="errorMsg"></div>
-    <form id="loginForm" autocomplete="off">
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="text" id="email" name="email" placeholder="Enter your email" required>
+  <div class="auth-page-wrapper">
+    <div class="logo-container">
+      <img src="../src/image/favivon-logo.png" alt="Africa Hotel Logo" class="page-logo">
+    </div>
+    <div class="login-container">
+      <h2>Sign In</h2>
+      <div class="error-message" id="errorMsg"></div>
+      <form id="loginForm" autocomplete="off">
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="text" id="email" name="email" placeholder="Enter your email" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" placeholder="Enter your password" required autocomplete="current-password">
+          <a href="#" id="forgotPasswordLink" class="forgot-link">Forgot password?</a>
+        </div>
+        <button type="submit" class="login-btn">Login</button>
+      </form>
+      <div class="form-footer">
+        Don't have an account? <a href="register.html">Sign up</a>
       </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Enter your password" required autocomplete="current-password">
-        <a href="#" id="forgotPasswordLink" class="forgot-link">Forgot password?</a>
-      </div>
-      <button type="submit" class="login-btn">Login</button>
-    </form>
-    <div class="form-footer">
-      Don't have an account? <a href="register.html">Sign up</a>
     </div>
   </div>
 
