--- a/public/html/register.html
+++ b/public/html/register.html
@@ -3,43 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Registration | Africa hotel</title>
+  <link rel="icon" type="image/png" href="../src/image/favivon-logo.png">
+  <link rel="shortcut icon" type="image/png" href="../src/image/favivon-logo.jpg">
   <link rel="stylesheet" href="../styles/login.css">
   <link rel="stylesheet" href="../styles/register.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-  
-  <div class="login-container">
-    <h2>Sign up</h2>
-    <div class="error-message" id="errorMsg"></div>
-    <form id="registerForm" autocomplete="off">
-      <div class="form-group">
-        <label for="firstname">First name</label>
-        <input type="text" id="firstName" name="firstName" placeholder="Enter first name" required>
+  <div class="auth-page-wrapper">
+    <div class="logo-container">
+      <img src="../src/image/favivon-logo.png" alt="Africa Hotel Logo" class="page-logo">
+    </div>
+    <div class="login-container">
+      <h2>Sign up</h2>
+      <div class="error-message" id="errorMsg"></div>
+      <form id="registerForm" autocomplete="off">
+        <div class="form-group">
+          <label for="firstname">First name</label>
+          <input type="text" id="firstName" name="firstName" placeholder="Enter first name" required>
+        </div>
+        <div class="form-group">
+          <label for="lastName">Last name</label>
+          <input type="text" id="lastName" name="lastName" placeholder="Enter second name" required>
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="Enter email" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" placeholder="Enter password" required>
+        </div>
+        <button type="submit" class="login-btn">Register</button>
+      </form>
+      <div class="form-footer">
+        Already have an account? <a href="login.html">Sign in</a>
       </div>
-      <div class="form-group">
-        <label for="lastName">Last name</label>
-        <input type="text" id="lastName" name="lastName" placeholder="Enter second name" required>
-      </div>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="Enter email" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Enter password" required>
-      </div>
-      
-      <button type="submit" class="login-btn">Register</button>
-    </form>
-    <div class="form-footer">
-      Already have an account? <a href="login.html">Sign in</a>
     </div>
   </div>
-  
   <script src="../js/register.js"></script>
-  
 </body>
 </html>
