--- a/public/html/reset-password.html
+++ b/public/html/reset-password.html
@@ -3,40 +3,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
   <meta charset="UTF-8">
-  <title>Reset Password</title>
+  <title>Reset Password | Africa hotel</title>
+  <link rel="icon" type="image/png" href="../src/image/favivon-logo.png">
+  <link rel="shortcut icon" type="image/png" href="../src/image/favivon-logo.jpg">
   <link rel="stylesheet" href="../styles/login.css">
 </head>
 <body>
-  <div class="login-container">
-    <h2>Reset Password</h2>
-    <form id="resetForm">
-      <input type="password" id="newPassword" placeholder="Enter new password" required>
-      <input type="password" id="confirmPassword" placeholder="Confirm new password" required>
-      <button type="submit" class="login-btn">Reset Password</button>
-      <div id="resetMsg" class="error-message"></div>
-    </form>
+  <div class="auth-page-wrapper">
+    <div class="logo-container">
+      <img src="../src/image/favivon-logo.png" alt="Africa Hotel Logo" class="page-logo">
+    </div>
+    <div class="login-container">
+      <h2>Reset Password</h2>
+      <form id="resetForm">
+        <input type="password" id="newPassword" placeholder="Enter new password" required>
+        <input type="password" id="confirmPassword" placeholder="Confirm new password" required>
+        <button type="submit" class="login-btn">Reset Password</button>
+        <div id="resetMsg" class="error-message"></div>
+        <a href="login.html">Back to login</a>
+      </form>
+    </div>
   </div>
   <script>
     const urlParams = new URLSearchParams(window.location.search);
     const token = urlParams.get('token');
     const resetForm = document.getElementById('resetForm');
     const newPassword = document.getElementById('newPassword');
+    const confirmPassword = document.getElementById('confirmPassword');
     const resetMsg = document.getElementById('resetMsg');
+
+    // Debug: Log the token to console
+    console.log('Token from URL:', token);
 
     resetForm.addEventListener('submit', async function(e) {
       e.preventDefault();
+      
+      // Validate password
       if (!newPassword.value.trim()) {
         resetMsg.textContent = 'Please enter a new password.';
         resetMsg.className = 'error-message active error';
         return;
       }
+
+      // Validate password confirmation
+      if (newPassword.value !== confirmPassword.value) {
+        resetMsg.textContent = 'Passwords do not match.';
+        resetMsg.className = 'error-message active error';
+        return;
+      }
+
+      // Validate password length
+      if (newPassword.value.length < 6) {
+        resetMsg.textContent = 'Password must be at least 6 characters.';
+        resetMsg.className = 'error-message active error';
+        return;
+      }
+
       try {
+        console.log('Sending reset request with token:', token);
         const res = await fetch('http://localhost:5000/api/auth/reset-password', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ token, password: newPassword.value })
         });
         const data = await res.json();
+        console.log('Response from server:', data);
         if (data.error) {
           resetMsg.textContent = data.error;
           resetMsg.className = 'error-message active error';
@@ -46,6 +77,7 @@
           resetForm.reset();
         }
       } catch (err) {
+        console.error('Error during reset:', err);
         resetMsg.textContent = 'Something went wrong. Please try again.';
         resetMsg.className = 'error-message active error';
       }
