--- a/public/html/gallery.html
+++ b/public/html/gallery.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/gallery.css">
     <link rel="stylesheet" href="../styles/home-styles.css">
     <link rel="stylesheet" href="../styles/details.css">
+    <link rel="stylesheet" href="../styles/offline.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
@@ -40,7 +41,7 @@
       <a href="https://www.google.com/maps?q=9.805929860039297, 38.419994250887584"  target="_blank" rel="noopener"><i class="fas fa-map-marker-alt"></i> <span class="link-text">Location</span></a>
       <a href="#"><i class="fas fa-utensils"></i> <span class="link-text">Dining</span></a>
       <a href="gallery.html"><i class="fas fa-images"></i> <span class="link-text">Gallery</span></a>
-      <a href="#"><i class="fas fa-heart"></i> <span class="link-text">Wedding</span></a>
+      <a href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> <span class="link-text">Log out</span></a>
     </nav>
   </aside>
     <div class="nav-center">
@@ -57,18 +58,7 @@
  <section>
       <header class="gallery-header">
     <h1>GALLERY</h1>
-    <nav class="gallery-nav">
-      <ul>
-        <li></li><a href="#">HOTEL</a></li>
-        <li><a href="#">ROOMS</a></li>
-        <li><a href="#">DINING</a></li>
-        <li><a href="#">POOL</a></li>
-        <li><a href="#">ACTIVITIES</a></li>
-        <li><a href="#">MEETINGS</a></li>
-        <li><a href="#">WEDDINGS</a></li>
-      </ul>
-      <div class="hero-bottom"></div>
-    </nav>
+    <div class="hero-bottom"></div>
   </header>
  </section>
   <section class="gallery-content">
@@ -176,5 +166,6 @@
   </footer>
   <script src="../js/authGuard.js"></script>
 <script src="../js/javaScript.js"></script>
+<script src="../js/main.js"></script>
 </body>
 </html>
