--- a/public/html/login.html
+++ b/public/html/login.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" href="../src/image/favivon-logo.png">
   <link rel="shortcut icon" type="image/png" href="../src/image/favivon-logo.jpg">
   <link rel="stylesheet" href="../styles/login.css">
+  <link rel="stylesheet" href="../styles/offline.css">
 </head>
 <body>
   <div class="auth-page-wrapper">
@@ -47,5 +48,6 @@
   </div>
 
   <script src="../js/login.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 </html>
