--- a/public/html/reset-password.html
+++ b/public/html/reset-password.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" href="../src/image/favivon-logo.png">
   <link rel="shortcut icon" type="image/png" href="../src/image/favivon-logo.jpg">
   <link rel="stylesheet" href="../styles/login.css">
+  <link rel="stylesheet" href="../styles/offline.css">
 </head>
 <body>
   <div class="auth-page-wrapper">
@@ -35,27 +36,33 @@
     // Debug: Log the token to console
     console.log('Token from URL:', token);
 
+    function showResetMsg(message, isSuccess) {
+      resetMsg.textContent = message;
+      resetMsg.className = 'error-message active ' + (isSuccess ? 'success' : 'error');
+      setTimeout(() => {
+        resetMsg.className = 'error-message';
+        resetMsg.textContent = '';
+      }, 2000);
+    }
+
     resetForm.addEventListener('submit', async function(e) {
       e.preventDefault();
       
       // Validate password
       if (!newPassword.value.trim()) {
-        resetMsg.textContent = 'Please enter a new password.';
-        resetMsg.className = 'error-message active error';
+        showResetMsg('Please enter a new password.', false);
         return;
       }
 
       // Validate password confirmation
       if (newPassword.value !== confirmPassword.value) {
-        resetMsg.textContent = 'Passwords do not match.';
-        resetMsg.className = 'error-message active error';
+        showResetMsg('Passwords do not match.', false);
         return;
       }
 
       // Validate password length
       if (newPassword.value.length < 6) {
-        resetMsg.textContent = 'Password must be at least 6 characters.';
-        resetMsg.className = 'error-message active error';
+        showResetMsg('Password must be at least 6 characters.', false);
         return;
       }
 
@@ -69,20 +76,18 @@
         const data = await res.json();
         console.log('Response from server:', data);
         if (data.error) {
-          resetMsg.textContent = data.error;
-          resetMsg.className = 'error-message active error';
+          showResetMsg(data.error, false);
         } else {
-          resetMsg.textContent = data.message;
-          resetMsg.className = 'error-message active success';
+          showResetMsg(data.message, true);
           resetForm.reset();
         }
       } catch (err) {
         console.error('Error during reset:', err);
-        resetMsg.textContent = 'Something went wrong. Please try again.';
-        resetMsg.className = 'error-message active error';
+        showResetMsg('Something went wrong. Please try again.', false);
       }
     });
   </script>
    <script src="../js/authGuard.js"></script>
+   <script src="../js/main.js"></script>
 </body>
 </html>
