--- a/public/html/details.html
+++ b/public/html/details.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" type="image/png" href="../src/image/favivon-logo.jpg">
   <link rel="stylesheet" href="../styles/details.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link rel="stylesheet" href="../styles/offline.css">
 </head>
 <body>
   <!-- Top Bar -->
@@ -42,7 +43,7 @@
       <a href="https://www.google.com/maps?q=9.805929860039297, 38.419994250887584"  target="_blank" rel="noopener"><i class="fas fa-map-marker-alt"></i> <span class="link-text">Location</span></a>
       <a href="#"><i class="fas fa-utensils"></i> <span class="link-text">Dining</span></a>
       <a href="gallery.html"><i class="fas fa-images"></i> <span class="link-text">Gallery</span></a>
-      <a href="#"><i class="fas fa-heart"></i> <span class="link-text">Wedding</span></a>
+      <a href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> <span class="link-text">Log out</span></a>
     </nav>
   </aside>
     <div class="nav-center">
@@ -340,6 +341,7 @@
   </footer>
   <script src="../js/authGuard.js"></script>
   <script src="../js/details.js"></script>
+  <script src="../js/main.js"></script>
  
   <script src="../js/javaScript.js"></script>
 </body>
