--- a/public/html/register.html
+++ b/public/html/register.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" type="image/png" href="../src/image/favivon-logo.jpg">
   <link rel="stylesheet" href="../styles/login.css">
   <link rel="stylesheet" href="../styles/register.css">
+  <link rel="stylesheet" href="../styles/offline.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -44,5 +45,6 @@
     </div>
   </div>
   <script src="../js/register.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 </html>
