Update all files with latest changes

--- a/public/html/booking.html
+++ b/public/html/booking.html
@@ -21,10 +21,11 @@
         <form id="bookingForm">
           <div class="form-row">
             <div class="form-group">
-              <label for="checkin">Check-In date</label>
+              <label for="chec
+              kin">Check-In date</label>
               <div class="input-icon">
                 <span class="icon" id="checkinIcon">&#128197;</span>
-                <input type="date" id="checkin" required>
+                <input type="date" id="checkin" required title="Select check-in date" placeholder="Check-in date">
               </div>
             </div>
             <div class="form-group">
