--- a/public/html/index.html
+++ b/public/html/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" href="../src/image/favivon-logo.png">
   <link rel="shortcut icon" type="image/png" href="../src/image/favivon-logo.jpg">
   <link rel="stylesheet" href="../styles/home-styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link rel="stylesheet" href="../styles/offline.css">
 </head>
 <body>
@@ -97,47 +97,43 @@
   <!-- Custom Footer -->
   <footer class="custom-footer" id="footer-contact">
     <div class="footer-main">
+      <!-- Left: Logo & Brand -->
       <div class="footer-logo">
-        <img src="../src/image/Add-a-heading-460x575.jpg" alt="Africa hotel logo">
+        <img src="../src/image/Add-a-heading-460x575.jpg" alt="Africa Hotel Logo">
         <div class="footer-brand">
           <span class="brand-main">AFRICA</span>
           <span class="brand-sub">HOTEL<sup>™</sup></span>
         </div>
       </div>
+      <!-- Center: Info & Links -->
       <div class="footer-info">
         <h2>Africa Hotel Gebre Guracha</h2>
-        <div class="footer-details">
-          <div>
-            <span>On The Main Road, Gebre Guracha, Ethiopia</span>
+        <div class="footer-details-row">
+          <div class="footer-address">
+            <span>On The Main Road,<br>Gebre Guracha, Ethiopia</span>
           </div>
-          <div>
+          <div class="footer-phone">
             <span>Tel: +251 963367651</span>
           </div>
-          <div>
-            <a href="#">Hotel Policies</a><br>
-            <a href="#">Careers</a>
-          </div>
-          <div>
-            <span class="footer-social-title">SOCIAL</span><br>
-            <a href="#" class="footer-social-link"><i class="fab fa-facebook-f"></i> Facebook</a><br>
-            <a href="#" class="footer-social-link"><i class="fab fa-twitter"></i> Twitter</a>
-          </div>
+          <ul class="footer-links">
+            <li><a href="#">Hotel Policies</a></li>
+            <li><a href="#">Careers</a></li>
+          </ul>
         </div>
+      </div>
+      <!-- Right: Social Links -->
+      <div class="footer-social-group">
+        <span class="footer-social-title">SOCIAL</span>
+        <a href="#" class="footer-social-link"><i class="fab fa-facebook-f"></i> Facebook</a>
+        <a href="#" class="footer-social-link"><i class="fab fa-tiktok"></i> Tiktok</a>
+        <a href="#" class="footer-social-link"><i class="fab fa-linkedin"></i> LinkedIn</a>
+        <a href="#" class="footer-social-link"><i class="fab fa-x-twitter"></i> X</a>
       </div>
     </div>
     <div class="footer-divider">
       <hr>
       <span class="footer-diamond">&#9674;</span>
       <hr>
-    </div>
-  </footer>
-  <!-- Responsive Footer Start -->
-  <footer class="footer">
-    <div class="footer-social">
-      <a href="#"><i class="fab fa-facebook-f"></i> Facebook</a>
-      <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
-      <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
-      <a href="#"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
     </div>
     <div class="footer-copy">
       © 2025 Africa Hotel. All rights reserved.
