Final push: all latest files and updates

--- a/public/html/pay.html
+++ b/public/html/pay.html
@@ -137,7 +137,7 @@
         }
 
         #chapa-pay-button:hover {
-            background-color: #149a2f;
+            background-color: #189030;
         }
 
         #chapa-error-container {
