--- a/public/html/thank-you.html
+++ b/public/html/thank-you.html
@@ -59,7 +59,7 @@
       display: inline-block;
       margin-top: 18px;
       color: #fff;
-      background: linear-gradient(90deg, #66ff94 0%, #3460db 100%);
+      background: #183fab;
       text-decoration: none;
       font-weight: bold;
       padding: 12px 32px;
@@ -68,7 +68,7 @@
       transition: background 0.2s, color 0.2s;
     }
     .details a:hover {
-      background: linear-gradient(90deg, #3460db 0%, #e3ff66 100%);
+      background: rgb(27, 180, 13);
       color: #fff;
       text-decoration: none;
     }
@@ -76,10 +76,10 @@
       .thankyou-card {
         padding: 10px 2vw 10px 2vw;
         min-width: 0;
-        max-width: 99vw;
+        max-width: 85vw;
       }
       .success {
-        font-size: 1.3em;
+        font-size: 1.25em;
         gap: 6px;
       }
       .success-icon {
@@ -97,7 +97,8 @@
       }
       .details a {
         padding: 8px 0;
-        width: 100%;
+        width: 70%;
+        align-items: center;
         font-size: 0.98em;
         border-radius: 6px;
       }
