Update email styles, payment flow, and frontend

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -69,16 +69,11 @@
       <a href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> <span class="link-text">Log out</span></a>
     </nav>
   </aside>
-
   <!-- Hero Video Section -->
   <section class="hero-video-section">
     <video class="hero-video" autoplay muted loop playsinline>
       <source src="../src/video/regency_addra_masthead_0924.webm" type="video/mp4">
     </video>
-    <div class="hero-overlay"></div>
-    <div class="hero-content">
-      <!-- You can add a headline or call-to-action here if you want -->
-    </div>
   </section>
 
   <!-- Welcome Section -->
@@ -90,7 +85,7 @@
       </p>
     </div>
     <div class="welcome-image">
-      <img src="../src\image\addlc-summerfields-restaurant-7465-hor-wide.webp" alt="Hyatt Regency Dining Room">
+      <img src="../src\image\addlc-summerfields-restaurant-7465-hor-wide.webp" alt="africa-hotel-rage">
     </div>
   </section>
 
